--- a/finance/main/templates/main/home.html
+++ b/finance/main/templates/main/home.html
@@ -3,6 +3,7 @@
 {% block title %}
     Home
 {% endblock %}
+{% load mathfilters %}
 {% load crispy_forms_tags %}
 
 {% block content %}
@@ -52,12 +53,12 @@
                                     {% for category, amount in debitCategory.items %}
                                         <tr>
                                             <td>{{ category }}</td>
-                                            <td>{{ user.profile.currency }}{{ amount }}</td>
+                                            <td>-{{ user.profile.currency }}{{ amount|abs }}</td>
                                         </tr>
                                     {% endfor %}
                                     <tr>
                                         <td class="fw-bold text-sm-end text-lg-center">Total</td>
-                                        <td>{{ user.profile.currency }}{{ debitTotal }}</td>
+                                        <td>-{{ user.profile.currency }}{{ debitTotal|abs }}</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -110,7 +111,7 @@
                                     {% for account, amount in debitAccounts.items %}
                                         <tr>
                                             <td>{{ account }}</td>
-                                            <td>{{ user.profile.currency }}{{ amount }}</td>
+                                            <td>-{{ user.profile.currency }}{{ amount|abs }}</td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
@@ -146,7 +147,7 @@
                 <h3>Add a Transaction</h3>
                 <form action="/" class="form-control form-control-sm" method="POST" autocomplete="off">
                     {% csrf_token %}
-                    {{ formD | crispy }}
+                    {{ form | crispy }}
                     <button name="add_expense" type="submit" class="btn btn-secondary">Add Debit</button>
                     <button name="add_credit" type="submit" class="btn btn-secondary">Add Credit</button>
                 </form>
@@ -176,7 +177,7 @@
                             {% for debit in debitData %}
                                     <tr>
                                         <td>{{ debit.date }}</td>
-                                        <td>{{ user.profile.currency }}{{ debit.amount }}</td>
+                                        <td>-{{ user.profile.currency }}{{ debit.amount|abs }}</td>
                                         <td>{{ debit.description }}</td>
                                         <td>{{ debit.category }}</td>
                                         <td>{{ debit.account }}</td>
