--- a/finance/register/templates/passwordResetConfirm.html
+++ b/finance/register/templates/passwordResetConfirm.html
@@ -16,7 +16,7 @@
     </div>
     {% endif %}
     
-    <div class="container">
+    <div class="container" id="passwordReset">
         <h2>Password Reset Confirm</h2>
         <p>Please enter your new password</p>
         <form method="post">
