--- a/finance/register/templates/passwordReset.html
+++ b/finance/register/templates/passwordReset.html
@@ -16,7 +16,7 @@
     </div>
     {% endif %}
     
-    <div class="container">
+    <div class="container" id="emailReset">
         <h2>Password Reset</h2>
         <p>Please enter the email associated with your account</p>
         <form method="post">
